Make plugin compatible with Bamboo 10.x (#290)
* Make plugin compatible with Bamboo 10.x

* Fix browser tests

* Tweak injection tests and update resources

* Update test resources

* Update resources properly

* Pass authcontext to get the job logs

* Update test resources

* Bump Bamboo version to 10.2.0

* Fix the Maven executable reference in test resources

* Fix Maven injection tests

* Update resources once again

* Update resources by removing capabilities